--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "KofuJS a slightly opinionated and elegant JS framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:fw": "webpack --mode development --env.NODE_ENV=dev",
+    "build:webpack": "webpack --mode production --env.NODE_ENV=prod",
+    "watch": "gulp",
+    "compile": "gulp coffee"
   },
   "repository": {
     "type": "git",
@@ -18,23 +21,43 @@
   },
   "homepage": "https://github.com/arthurbernierjr/kofujs#readme",
   "dependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/plugin-transform-react-jsx": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-loader": "^8.0.6",
     "coffeescript": "^2.4.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "koa": "^2.11.0",
     "koa-router": "^7.4.0",
+    "lodash.filter": "^4.6.0",
+    "lodash.map": "^4.6.0",
     "lodash.reduce": "^4.6.0",
-    "redux": "^4.0.5",
     "rxjs": "^6.5.3",
     "snabbdom": "^0.7.4",
     "vanilla-router": "^1.2.7"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/plugin-transform-async-to-generator": "^7.7.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.7",
+    "clean-webpack-plugin": "^0.1.0",
+    "coffee-loader": "^0.9.0",
+    "consola": "^2.11.2",
     "gulp": "^4.0.2",
     "gulp-coffee": "^3.0.3",
     "gulp-nodemon": "^2.4.2",
-    "webpack": "^4.41.4"
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "nodemon": "^2.0.2",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-md5-hash": "^0.0.6"
   }
 }
