--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "lodash.reduce": "^4.6.0",
     "rxjs": "^6.5.3",
     "snabbdom": "^0.7.4",
-    "vanilla-router": "^1.2.7"
-  },
-  "devDependencies": {
+    "vanilla-router": "^1.2.7",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
