--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": [
-    "@babel/preset-env"
+  [  "@babel/preset-env",
+    {
+      "useBuiltIns": "entry"
+    }]
   ],
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
@@ -9,14 +12,6 @@
       {
         "pragma": "h"
       }
-    ],
-    ["@babel/plugin-proposal-decorators", {
-      "legacy": true
-    }],
-    ["@babel/plugin-proposal-class-properties", {
-      "loose": true
-    }],
-    "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-transform-async-to-generator"
+    ]
   ]
 }
