--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kofujs",
-  "version": "1.1.0-alpha",
+  "version": "1.1.0-alpha.1",
   "description": "KofuJS a slightly opinionated and elegant JS framework",
   "main": "index.js",
   "scripts": {
@@ -36,38 +36,24 @@
     "color": "^3.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-async-to-generator": "^7.7.4",
-    "@babel/plugin-transform-react-jsx": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-react-jsx": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.7",
     "clean-webpack-plugin": "^0.1.0",
-    "coffee-loader": "^0.9.0",
     "coffeescript": "^2.4.1",
     "consola": "^2.11.2",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-coffee": "^3.0.3",
-    "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.4.2",
     "html-webpack-plugin": "^3.2.0",
-    "koa": "^2.11.0",
-    "koa-router": "^7.4.0",
-    "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.2",
     "rollup": "^1.31.0",
-    "vanilla-router": "^1.2.7",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "webpack-md5-hash": "^0.0.6"
-  }
+  },
+  "browserslist": "> 0.25%, not dead"
 }
