--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/arthurbernierjr/kofujs#readme",
   "bundleDependencies": true,
   "dependencies": {
+    "color": "^3.1.2",
     "jss": "^10.0.1",
     "jss-preset-default": "^10.0.1",
     "lodash.filter": "^4.6.0",
@@ -33,7 +34,7 @@
     "lodash.reduce": "^4.6.0",
     "rxjs": "^6.5.3",
     "snabbdom": "^0.7.4",
-    "color": "^3.1.2"
+    "vanilla-router": "^1.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
